--- a/LamViecVoiFile_Form/LamViecVoiFile_Form.csproj
+++ b/LamViecVoiFile_Form/LamViecVoiFile_Form.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DIEM.cs" />
+    <Compile Include="fmain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fmain.designer.cs">
+      <DependentUpon>fmain.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SinhVien.cs" />
+    <EmbeddedResource Include="fmain.resx">
+      <DependentUpon>fmain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
