--- a/LamViecVoiFile_Form/LamViecVoiFile_Form.csproj
+++ b/LamViecVoiFile_Form/LamViecVoiFile_Form.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="fTest.cs">
       <SubType>Form</SubType>
     </Compile>
